[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newpantheon"
dynamic = ["version"]
description = 'A modern reimplementation of the Pantheon of Congestion Control'
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Shinwoo Kim", email = "shinwookim@proton.me" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/shinwookim/NewPantheon#readme"
Issues = "https://github.com/shinwookim/NewPantheon/issues"
Source = "https://github.com/shinwookim/NewPantheon"

[project.optional-dependencies]
dev = [
  "black",
  "coverage",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[tool.hatch.version]
path = "src/newpantheon/__about__.py"

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/newpantheon tests}"

[tool.coverage.run]
source_pkgs = ["newpantheon", "tests"]
branch = true
parallel = true
omit = [
  "src/newpantheon/__about__.py",
]

[tool.coverage.paths]
newpantheon = ["src/newpantheon", "*/newpantheon/src/newpantheon"]
tests = ["tests", "*/newpantheon/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
